# neurotorch

./: .gitignore  LICENSE  README.md  debug.py  main.py  neurotorch.spec  neurotorch_light.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml  documentation.yml
dev/: build_sphinx.txt  test.py  trace_selector_test.py  uploadPip.txt
dev/notebooks/: devNotebook1.ipynb  devNotebook2.ipynb  devNotebook24-11.ipynb  devNotebook24-12.ipynb  devNotebook25-01.ipynb  devNotebook25-3 2.ipynb  devNotebook25-3.ipynb  devNotebook25-7.ipynb  devNotebook4.ipynb  devNotebook5.ipynb  devNotebook6.ipynb  devNotebook7.ipynb
doc/source/: conf.py  getting_started.rst  index.rst
docs/: genindex.html  getting_started.html  searchindex.js
docs/.doctrees/: environment.pickle  getting_started.doctree  imagej.doctree
docs/_static/: documentation_options.js
docs/algorithm/: detection_algorithms.html
docs/media/: neurotorch_logo.icns
docs/source/: conf.py  first_steps.rst  glossary.rst  imagej.rst  index.rst
docs/tabs/: tab_image.html  tab_roifinder.html
neurotorch/: VERSION.txt  __init__.py  main.py  neurotorch_full.py  neurotorch_light.py  requirements.txt
neurotorch/gui/: components.py  settings.py  tab1.py  tab2.py  tab3.py  tabAnalysis.py  tabWelcome.py  window.py
neurotorch/user/: .gitignore  imgDiffMax.dump
neurotorch/utils/: api.py  api_guy.py  detection.py  image.py  pyimagej.py  resourcemanager.py  update.py  (+4 more)
neurotorchmz/: __init__.py  __main__.py  debug.py  main.py  neurotorch_full.py  neurotorch_light.py  requirements.txt
tests/: core_test.py
(+63 files in other folders)
